--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@account.tech/core": "^0.1.9",
     "@account.tech/payment": "^0.1.0",
+    "@mysten/dapp-kit": "^0.15.6",
     "@mysten/sui": "^1.27.0",
     "@shinami/nextjs-zklogin": "^0.4.1",
     "@tailwindcss/postcss": "^4.1.4",
@@ -20,6 +21,7 @@
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
+    "react-qr-code": "^2.0.15",
     "tailwindcss": "^4.1.4"
   },
   "devDependencies": {
