--- a/package.json
+++ b/package.json
@@ -12,16 +12,23 @@
     "@mysten/dapp-kit": "^0.15.6",
     "@mysten/sui": "^1.27.0",
     "@shinami/nextjs-zklogin": "^0.4.1",
+    "@supabase/supabase-js": "^2.49.4",
     "@tailwindcss/postcss": "^4.1.4",
+    "axios": "^1.8.4",
+    "firebase": "^11.6.0",
     "flowbite": "^3.1.2",
     "flowbite-react": "^0.11.7",
+    "fs": "^0.0.1-security",
     "next": "latest",
+    "pinata": "^2.2.1",
     "postcss": "^8.5.3",
     "react": "^18.2.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-qr-code": "^2.0.15",
+    "react-toastify": "^11.0.5",
     "tailwindcss": "^4.1.4"
   },
   "devDependencies": {
