--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "@account.tech/core": "^0.1.9",
     "@account.tech/payment": "^0.1.0",
     "@mysten/dapp-kit": "^0.15.6",
-    "@mysten/sui": "^1.27.0",
+    "@mysten/sui": "^1.28.2",
     "@shinami/nextjs-zklogin": "^0.4.1",
     "@supabase/supabase-js": "^2.49.4",
     "@tailwindcss/postcss": "^4.1.4",
@@ -34,6 +34,7 @@
   "devDependencies": {
     "@types/node": "^18.0.0",
     "@types/react": "^18.0.14",
+    "@types/react-copy-to-clipboard": "^5.0.7",
     "@types/react-dom": "^18.0.5",
     "typescript": "^5.2.2"
   }
